# OneGate

./: Cargo.toml  README.md  env.example
media/: maid2.jfif  maid4.jfif  maid5.jfif
migrations/: 20230718055828_address.sql  20230718060847_society.sql  20230718061232_amenity.sql  20230718061424_userauth.sql  20230718061434_auth.sql  20230718061911_complaint.sql  20230718063939_userdetails.sql  20230718064257_user.sql  20230718064823_home.sql  20230718065038_maid.sql  20230718065454_member.sql  20230718070110_notice.sql  20230718070340_security.sql  20230718073425_guest.sql  20230718073723_service_provider.sql  20230718073904_society_guest.sql  20230718073931_society_security.sql  20230718074008_contact.sql  20230719100952_roles.sql  20230807110100_auth_roles.sql
src/: app_state.rs  main.rs  server.rs
src/apis/: amenity.rs  auth.rs  complaint.rs  entrylog.rs  guest.rs  home.rs  info.rs  member.rs  mod.rs  notice.rs  notification.rs  owner.rs  payment.rs  security.rs  service_provider.rs  society.rs  staff.rs  swimming_pool.rs  user.rs
src/database/: address.rs  amenity.rs  auth.rs  complaint.rs  contact.rs  guest.rs  home.rs  maid.rs  member.rs  mod.rs  notice.rs  role.rs  security.rs  security_guest.rs  service_provider.rs  society.rs  user.rs  user_details.rs
src/dto/: amenity.rs  auth_types.rs  complaint.rs  contact.rs  entrylog.rs  flat.rs  guest.rs  home_types.rs  maintenance.rs  member.rs  mod.rs  notice.rs  notification.rs  owner.rs  payment.rs  role.rs  security.rs  service_provider.rs  slot.rs  society.rs  staff.rs  swimming_pool.rs  user_details.rs
(+84 files in other folders)
