[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
actix-http = "3"
actix-identity = "0"
actix-cors = "0"
actix-files = "0"
awc = { version = "3", features = ["rustls"] }
urlencoding = "2"
rand = "0"
anyhow = "1"
thiserror = "1"
validator = { version = "0", features = ["derive"] }
dotenv = "0"
log = "0"
env_logger = "0"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
biscuit-auth = "6"
biscuit-actix-middleware = { git = "https://github.com/biscuit-auth/biscuit-actix-middleware" }
sqlx = { version = "0", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
ts-rs = {git = "https://github.com/Aleph-Alpha/ts-rs.git", features = ["serde-compat", "uuid-impl","chrono-impl",] }
tempfile = "3"
rust-argon2 = {version = "2", default-features = false}
sqids = "0.2.0"


[dev-dependencies]
actix-http-test = "3.0.0-beta.4"
actix-rt = "2"
claim = "0"


